--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
         <h1 aria-hidden="true" style="display: none;">Search for routes</h1>
         <div id="form">
             <form>
-                <input type="text" name="fromInput" placeholder="Choose starting point" />
-                <input type="text" name="toInput"  placeholder="Choose distination" />
+                <input type="text" id="fromInput" placeholder="Choose starting point" />
+                <input type="text" id="toInput"  placeholder="Choose distination" />
                 <input type="submit" />
             </form>
         </div>
@@ -25,6 +25,7 @@
             <ul></ul>
         </div>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../public/app.js"></script>
 </body>
 </html>
