--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,18 @@
     <title>TheStolens</title>
     <link rel="stylesheet" href="../public/style.css">
 </head>
+
 <body>
     <header>
         <h1>The Stolens</h1>
     </header>
-    
+
     <div id="main-container">
         <h1 aria-hidden="true" style="display: none;">Search for routes</h1>
         <div id="form">
             <form>
                 <input type="text" id="fromInput" placeholder="Choose starting point" />
-                <input type="text" id="toInput"  placeholder="Choose distination" />
+                <input type="text" id="currencyInput" placeholder="Choose your currency" />
                 <input type="submit" />
             </form>
         </div>
@@ -28,4 +30,5 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../public/app.js"></script>
 </body>
+
 </html>
