--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>The Stolens</h1>
+        <h1>Choose Your Next Destination</h1>
     </header>
 
     <div id="main-container">
