--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
         <h1 aria-hidden="true" style="display: none;">Search for routes</h1>
         <div id="form">
             <form>
-                <input type="text" id="fromInput" placeholder="Choose starting point" />
-                <input type="text" id="currencyInput" placeholder="Choose your currency" />
+                <input autocomplete="off" type="text" id="fromInput" placeholder="Choose starting point" />
+                <input autocomplete="off" type="text" id="currencyInput" placeholder="Choose your currency" />
                 <input type="submit" />
             </form>
         </div>
