--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
         <h1 aria-hidden="true" style="display: none;">Search for routes</h1>
         <div id="form">
             <form>
-                <input autocomplete="off" type="text" id="fromInput" placeholder="Choose starting point" />
-                <input autocomplete="off" type="text" id="currencyInput" placeholder="Choose your currency" />
-                <input type="submit" />
+                <input value="TLV" autocomplete="off" type="text" id="fromInput" placeholder="Choose starting point" />
+                <input value="ILS" autocomplete="off" type="text" id="currencyInput" placeholder="Choose your currency" />
+                <input type="submit" value="SEARCH FLIGHTS"/>
             </form>
         </div>
         <div id="routes">
